# noorfetch

./: Cargo.toml  GOALS.md  LICENSE  README.md  installer_linux.sh  installer_unix.sh
ascii-art/: arch.txt  artix.txt  bazzite.txt  cachyos.txt  darwin.txt  debian.txt  devuan.txt  endeavouros.txt  fedora.txt  freebsd.txt  garuda.txt  gentoo.txt  gnu.txt  guix.txt  kali.txt  lubuntu.txt  macos.txt  manjaro.txt  netbsd.txt  nobara.txt  openbsd.txt  opensuse.txt  popos.txt  rhel.txt  slackware.txt  trisquel.txt  tux.txt  ubuntu.txt  unknown.txt  vanilla.txt  void.txt  xubuntu.txt
src/: main.rs
src/Settings/: ascii.rs  config.rs  date.rs  date.rs~  detect_icons.rs  environment.rs
src/init/: ascii.rs  config.rs  date.rs  environment.rs
src/settings/: ascii.rs  config.rs  date.rs
src/ux/: ascii.rs  detect_icons.rs
