[package]
name = "noorfetch"
version = "1.6.9"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
chrono = "0.4.43"
colored = "3.1.1"
confy = "2.0.0"
directories = "6.0.0"
os-release = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.37.2"
whoami = "2.0.2"
